--- a/index.html
+++ b/index.html
@@ -32,18 +32,7 @@
       </form>
       <h2 class="title">Itens</h2>
       <ul id="items" class="list-group mb-4">
-        <li class="list-group-item">Item 1
-          <button class="btn btn-danger btn-sm float-right delete">X</button>
-        </li>
-        <li class="list-group-item">Item 2
-          <button class="btn btn-danger btn-sm float-right delete">X</button>
-        </li>
-        <li class="list-group-item">Item 3
-          <button class="btn btn-danger btn-sm float-right delete">X</button>
-        </li>
-        <li class="list-group-item">Item 4
-          <button class="btn btn-danger btn-sm float-right delete">X</button>
-        </li>
+        <!-- itens entrarão aqui -->
       </ul>
     </div>
   </div>
